--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,8 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_DATABASE: test_db
+          MYSQL_DATABASE: banwatchtest
           MYSQL_USER: root
-          MYSQL_PASSWORD: root
-          MYSQL_ROOT_PASSWORD: root
-        options: >-
-          --health-cmd "mysqladmin ping --silent"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    env:
-      DATABASE_URL: mysql://root:root@localhost:3306/test_db
 
     steps:
     - name: Checkout code
