--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,18 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_DATABASE: banwatchtest
+          MYSQL_DATABASE: test_db
           MYSQL_USER: root
+          MYSQL_PASSWORD: ""
+          MYSQL_ROOT_PASSWORD: ""
+        options: >-
+          --health-cmd "mysqladmin ping --silent"
+          --health-interval 20s
+          --health-timeout 10s
+          --health-retries 10
+
+    env:
+      DATABASE_URL: mysql://root@localhost:3306/test_db
 
     steps:
     - name: Checkout code
