--- a/tests/main.env
+++ b/tests/main.env
@@ -1,6 +1,6 @@
 PREFIX="bt?"
 #DB="sqlite:///test.db"
-DB="mysql://root:root@127.0.0.1/banwatchtest"
+DB="mysql://bot:password@127.0.0.1/banwatchtest"
 DEV=
 APPROVED=
 DENIED=
