--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-
     services:
       mariadb:
         image: mariadb:latest
@@ -15,7 +14,7 @@ jobs:
           MYSQL_DATABASE: banwatchtest
           MYSQL_USER: bot
           MYSQL_PASSWORD: password
-          MYSQL_ROOT_PASSWORD: ""
+          MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "yes"
         options: >-
           --health-cmd="mysqladmin ping -h 127.0.0.1 -u bot -p password"
           --health-interval=10s
