--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,10 @@ jobs:
           MYSQL_PASSWORD: password
           MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "yes"
         options: >-
+          --health-cmd="mysqladmin ping -u root"
           --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
+          --health-timeout=30s
+          --health-retries=10
 
     steps:
     - name: Checkout code
