--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           MYSQL_PASSWORD: password
           MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "yes"
         options: >-
-          --health-cmd="mysqladmin ping -u root"
+          --health-cmd="mysqladmin ping -u bot -ppassword"
           --health-interval=10s
           --health-timeout=30s
           --health-retries=10
