--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-
     services:
       mariadb:
         image: mariadb:latest
@@ -13,7 +12,9 @@ jobs:
           - 3306:3306
         env:
           MYSQL_DATABASE: banwatchtest
-          MYSQL_USER: root
+          MYSQL_USER: bot
+          MYSQL_PASSWORD: password
+          MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "yes"
 
     steps:
     - name: Checkout code
